Ajuste requisito 04, alternado para flexbox ao inves de usar table.

--- a/index.html
+++ b/index.html
@@ -13,36 +13,33 @@
         </header>
         <main>
             <section id="color-palette"></section>
-            <div id="pixel-board">
-                <div class="tableRow">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-                <div class="tableRow">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-                <div class="tableRow">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-                <div class="tableRow">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-            </div>
+            <section id="pixel-board">
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+                <span class="pixel"></span>
+            </section>
         </main>
         <script src="./script.js"></script>
     </body>
