Requisito 05, adicionado largura e altura dos pixel e implementado renderização via js.

--- a/index.html
+++ b/index.html
@@ -13,33 +13,7 @@
         </header>
         <main>
             <section id="color-palette"></section>
-            <section id="pixel-board">
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-                <span class="pixel"></span>
-            </section>
+            <section id="pixel-board"></section>
         </main>
         <script src="./script.js"></script>
     </body>
