--- a/index.html
+++ b/index.html
@@ -5,22 +5,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script type="text/javascript" src="script.js"></script>
   <title>Projeto Pixel Art [Aderson Silva]</title>
 </head>
 <body>
-  <h1 id=title>Paleta de Cores</h1>
-  <div id='color-palette'>
-  <div class='selected color' id=color1></div>
-  <div class='color' id=color2></div>
-  <div class='color' id=color3></div>
-  <div class='color' id=color4></div>
+  <h1 id="title">Paleta de Cores</h1>
+  <div id="color-palette">
+  <div class="selected color" id="color1"></div>
+  <div class="color" id="color2"></div>
+  <div class="color" id="color3"></div>
+  <div class="color" id="color4"></div>
   </div>
-<br>
-<div class='button'>
-<button id='clear-board'>Limpar</button>
-</div>
-<br>
-<div id='pixel-board'></div>
+  <button class="button" id="clear-board">Limpar</button>
+  <div id="pixel-board"></div>
+  <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
