--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1 id ="title"> Paleta de Cores </h1>
     <nav id ="color-pallete">
-        <span class ="color">paleta 1</span>
-        <span class ="color">paleta 2</span>
-        <span class ="color">paleta 3</span>
-        <span class ="color">paleta 4</span>
+        <div class ="color">cor 1 </div>
+        <div class ="color">cor 1 </div>
+        <div class ="color">cor 1 </div>
+        <div class ="color">cor 1 </div>
     </nav>
+<script src="./script.js"></script>
 </body>
 </html>
