--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <h1 id ="title"> Paleta de Cores </h1>
     <nav id ="color-pallete">
-        <div class ="color">cor 1 </div>
-        <div class ="color">cor 1 </div>
-        <div class ="color">cor 1 </div>
-        <div class ="color">cor 1 </div>
+        <div class ="color"></div>
+        <div class ="color"></div>
+        <div class ="color"></div>
+        <div class ="color"></div>
     </nav>
 <script src="./script.js"></script>
 </body>
