--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <td class="color"></td>
     </tr></table>
   </header>
-    <input type="text" id="board-size">
+    <input type="number" id="board-size" min ='0'>
     <button id="generate-board">VQV</button>
     <button id="clear-board">Limpar</button>
     <table id="pixel-board"></table>
