--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1 id = "title"> Paleta de Cores </h1>
+
+    <h1 id="title"> Paleta de Cores </h1>
+
+    <div id="color-palette">
+        <div class=color id='color-one'></div>
+        <div class=color id='color-two'></div>
+        <div class=color id='color-tree'></div>
+        <div class=color id='color-four'></div>
+    </id>
+    <div id = 'pixel-board'>
+        
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
