--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
     <h1 id ="title"> Paleta de Cores </h1>
-    <nav id ="color-pallete">
-        <div class ="color"></div>
-        <div class ="color"></div>
-        <div class ="color"></div>
-        <div class ="color"></div>
-    </nav>
+    <div id="color-palette">
+        <div>
+          <div class="color"></div>
+          <div class="color"></div>
+          <div class="color"></div>
+          <div class="color"></div>
+        </div>
+      </div>
 <script src="./script.js"></script>
 </body>
 </html>
