--- a/index.html
+++ b/index.html
@@ -1,50 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project-pixels-art</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <header><h1 id="title">  Paleta de Cores    </h1></header>
-    <div id="color-palette">
-        <div class="color " id="preto" >cor preta </div>
-        <div class="color " id="vermelho">cor vermelha </div>
-        <div class="color " id="azul">cor azul </div>
-        <div class="color " id="verde"">cor verde </div>
-   
-    </div>
-    <div id="pixel-board">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-    </div>
-<script src="script.js"  >
+<html lang="pt-br">
 
-</script>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Projeto Pixels Art</title>
+</head>
+
+<body>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+  <div id="color-palette"></div>
+  <div class="btn">
+    <input min="1" max="50" type="number" name="texto" id="board-size">
+    <button id="generate-board">VQV</button>
+    <button id="clear-board">Limpar</button>
+  </div>
+  <div id="pixel-board"></div>
+  <script src="script.js"></script>
 </body>
+
 </html>
