--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
               <div class="color un"></div>
             </div>
           </div>
-    
+
+          <section>
+            <button id="clear-board">Limpar</button>
+          </section>
+          
           <div id="pixel-board"></div>
           </div>
       </nav>
