--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
       <section id="color-palette"></section>
+      <button id="clear-board">Limpar</button>
       <section id="pixel-board"></section>
     </main>
     <script src="./script.js"></script>
