--- a/index.html
+++ b/index.html
@@ -8,8 +8,19 @@
     <title>Pixel Art</title>
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
-
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+  <main>  
+    <table>
+      <tr id="color-palette">
+        <td class="color"></td>
+        <td class="color"></td>
+        <td class="color"></td>
+        <td class="color"></td>
+      </tr>
+    </table>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
