--- a/index.html
+++ b/index.html
@@ -12,14 +12,53 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
   <main>  
-    <table>
-      <tr id="color-palette">
+    <table id="color-palette">
+      <tr>
         <td class="color"></td>
         <td class="color"></td>
         <td class="color"></td>
         <td class="color"></td>
       </tr>
     </table>
+    <section>
+      <table id="pixel-board">
+        <tr>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+        </tr>
+        <tr>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+        </tr>
+        <tr>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+        </tr>
+        <tr>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+        </tr>
+        <tr>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+          <td class="pixel"></td>
+        </tr>
+      </table>
+    </section>
   </main>
   <script src="script.js"></script>
 </body>
