--- a/index.html
+++ b/index.html
@@ -14,15 +14,54 @@
     <h1 id="title"> Paleta de Cores </h1>
 
     <div id="color-palette">
-        <div class=color id='color-one'></div>
-        <div class=color id='color-two'></div>
-        <div class=color id='color-tree'></div>
-        <div class=color id='color-four'></div>
-        </id>
-        <div id='pixel-board'>
 
+        <div class=color id="color-one"></div>
+        <div class=color id="color-two"></div>
+        <div class=color id="color-tree"></div>
+        <div class=color id="color-four"></div>
+
+    </div>
+
+    <section id="pixel-board">
+        <div class="first-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
         </div>
-        <script src="script.js"></script>
+        <div class="second-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="third-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="fouth-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="fifth-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+      </section>
+    
+    </div>
+    <script src="script.js"></script>
 </body>
 
 </html>
