--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Pixel art</title>
 </head>
 <body>
-    <h1 id="titulo">Paleta de Cores</h1>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
+    
     <div id="color-palete">
         <div class="color" style="background-color:black;" onclick="setPenColour('black')"></div>
         <div class="color" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
