corrigindo color-palette

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
     
-    <div id="color-palete">
-        <div class="color" style="background-color:black;" onclick="setPenColour('black')"></div>
+    <div id="color-palette">
+        <div class="color" style="background-color:black;" onclick="setPenColour('black')" select ></div>
         <div class="color" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
         <div class="color" style="background-color:blue;" onclick="setPenColour('blue')"></div>
         <div class="color" style="background-color:red;" onclick="setPenColour('red')"></div>
