--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <h1 id="title">Paleta de Cores</h1>
   </header>
     
-    <div id="color-palette">
-        <div class="color" style="background-color:black;" onclick="setPenColour('black')" select ></div>
+    <section id="color-palette">
+        <div class="color" style="background-color:black;" onclick="setPenColour('black')" selected ></div>
         <div class="color" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
         <div class="color" style="background-color:blue;" onclick="setPenColour('blue')"></div>
         <div class="color" style="background-color:red;" onclick="setPenColour('red')"></div>
-    </div>
+    </section>
     <div id="art">
       <div id="pixel-board">
         <div class="pixel" onclick="setPixelColour(this)"></div>
@@ -54,7 +54,8 @@
         <div class="pixel" onclick="setPixelColour(this)"></div>
         <div class="pixel" onclick="setPixelColour(this)"></div>
       </div>
-    </div>      
+    </div>
+    <button id="clear-board">Limpar</button>      
   <script src="script.js"></script>    
 </body>
 </html>
