--- a/index.html
+++ b/index.html
@@ -5,57 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Pixel art</title>
+    <title>Pixels-Art</title>
+    
 </head>
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
-    
-    <section id="color-palette">
-        <div class="color" style="background-color:black;" onclick="setPenColour('black')" selected ></div>
-        <div class="color" style="background-color:chartreuse;" onclick="setPenColour('chartreuse')"></div>
-        <div class="color" style="background-color:blue;" onclick="setPenColour('blue')"></div>
-        <div class="color" style="background-color:red;" onclick="setPenColour('red')"></div>
-    </section>
-    <div id="art">
-      <div id="pixel-board">
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-      </div>
-      <div id="pixel-board">
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-        <div class="pixel" onclick="setPixelColour(this)"></div>
-      </div>
-    </div>
-    <button id="clear-board">Limpar</button>      
-  <script src="script.js"></script>    
+    <h1 id = "title">Paleta de Cores</h1>
 </body>
+<script src="script.js"></script>
 </html>
