--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <td class="color blue"></td>
     </tr>
   </table>
-  <nav><input type="text" size="10"><button id='change'>"Alterar" </button><button id='clear-btn'>"Limpar"</button></nav>
+  <nav><input type="text" size="10">
+    <button id='change'>"Alterar" </button>
+    <button id='clear-btn'>"Limpar"</button></nav>
   <table id="pixel-board">
   </table>
 
