--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </table>
   <nav><input type="text" size="10">
     <button id='change'>"Alterar" </button>
-    <button id='clear-btn'>"Limpar"</button></nav>
+    <button id='clear-board'>"Limpar"</button></nav>
   <table id="pixel-board">
   </table>
 
