--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <td class="color blue"></td>
     </tr>
   </table>
-  <nav><input type="text" size="10">
-    <button id='change'>"Alterar" </button>
+  <nav><input type="text" id="userText" size="10">
+    <button id='generate-board'>"VQV" </button>
     <button id='clear-board'>"Limpar"</button></nav>
   <table id="pixel-board">
   </table>
