testando atualizações ex 10

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <td class="color green"></td>
       <td class="color blue"></td>
     </tr>
-  </table>
-  <nav><input type="text" id="userText" size="10">
+  </table> <br>
+  <nav><input type="text" id="board-size" size="10">
     <button id='generate-board'>"VQV" </button>
-    <button id='clear-board'>"Limpar"</button></nav>
+    <button id='clear-board'>"Limpar"</button></nav><br>
   <table id="pixel-board">
   </table>
 
