Criei uma função de limpar o preenchimento e alterei no html colocando um onclick

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="color" id="color4"></div>
   </div>
   <div id="pixel-board"></div>
-  <button class="button" id="clear-board">Limpar</button>
+  <button class="button" id="clear-board" onclick="limparPixels()">Limpar</button>
   <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
