--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 </head>
 
 <body>
-  <header>
+  <header class="boxes">
     <h1 id="title">Paleta de Cores</h1>
+    <table>
+      <tr id="color-palette">
+        <td class="color black"></td>
+        <td class="color red"></td>
+        <td class="color green"></td>
+        <td class="color blue"></td>
+      </tr>
+    </table> <br>
+    <nav><input type="text" id="board-size" size="10" min="1">
+      <button id='generate-board'>"VQV" </button>
+      <button id='clear-board'>"Limpar"</button>
+    </nav><br>
+    <table id="pixel-board" class="boxes">
+    </table>
   </header>
-  <table>
-    <tr id="color-palette">
-      <td class="color black"></td>
-      <td class="color red"></td>
-      <td class="color green"></td>
-      <td class="color blue"></td>
-    </tr>
-  </table> <br>
-  <nav><input type="text" id="board-size" size="10">
-    <button id='generate-board'>"VQV" </button>
-    <button id='clear-board'>"Limpar"</button></nav><br>
-  <table id="pixel-board">
-  </table>
-
   <script src="script.js"></script>
 </body>
 
