--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1 id="title">Paleta de Cores</h1>
 	
 	<nav id="color-palette">
-        <div class="color selected">paleta 1</div>
-        <div class="color">paleta 2</div>
-        <div class="color">paleta 3</div>
-        <div class="color">paleta 4</div>
+        <div id="colorBlack" class="color selected">Preto</div>
+        <div id="colorRed" class="color">Vermelho</div>
+        <div id="colorBlue" class="color">Azul</div>
+        <div id="colorGreen" class="color">Verde</div>
     </nav>
 	
 		<button id="clear-board">Limpar</button>
