--- a/index.html
+++ b/index.html
@@ -21,7 +21,43 @@
     <div class="color" id="c3"></div>
     <div class="color" id="c4"></div>
   </div>
-
+  <table id="pixel-board">
+    <tr>
+      <th class="pixel"></th>
+      <th class="pixel"></th> 
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+    </tr>
+    <tr>
+      <th class="pixel"></th>
+      <th class="pixel"></th> 
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+    </tr>
+    <tr>
+      <th class="pixel"></th>
+      <th class="pixel"></th> 
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+    </tr>
+    <tr>
+      <th class="pixel"></th>
+      <th class="pixel"></th> 
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+    </tr>
+    <tr>
+      <th class="pixel"></th>
+      <th class="pixel"></th> 
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+      <th class="pixel"></th>
+    </tr>
+  </table>
   
 </body>
 </html>
