--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <div class="color" id="c3"></div>
     <div class="color" id="c4"></div>
   </div>
-  <table id="pixel-board">
+<div id="pixel-board">
+  <table>
     <tr>
       <th class="pixel"></th>
       <th class="pixel"></th> 
@@ -58,6 +59,7 @@
       <th class="pixel"></th>
     </tr>
   </table>
+</div>
   
 </body>
 </html>
