--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div class="color" id="c3"></div>
     <div class="color" id="c4"></div>
   </div>
-<div id="pixel-board">
-  <table>
+  <table id="pixel-board">
     <tr>
       <th class="pixel"></th>
       <th class="pixel"></th> 
@@ -59,7 +58,6 @@
       <th class="pixel"></th>
     </tr>
   </table>
-</div>
   
 </body>
 </html>
