--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id = "pixel-board"></div>
    
   
-<script type= "text/javascript" src = "script.js" async></script>
+<script type= "text/javascript" src = "script.js" ></script>
     
 </body>
 </html>
