--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <div class="color"></div>
   </div>
   <div>
-    <button></button>
-    <input type="number" min="1" >
-    <button></button>
+    <button id="generate-board">VQV</button>
+    <input type="number" min="1" id="board-size">
+    <button id="clear-board">Limpar Tudo</button>
   </div>
   <div id="pixel-board"></div>
   
