--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <div class="color" id="color3"></div>
         <div class="color" id="color4"></div>
     </div>
-    <input type="button" id="clear-board" value="Limpar">
+    <button id="clear-board">Limpar</button>
+    
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
