--- a/index.html
+++ b/index.html
@@ -11,53 +11,19 @@
   <header>
     <h1 id="title">Paleta de Cores</h1>
   </header>
-  <main>  
+
+  <main> 
     <table id="color-palette">
       <tr>
-        <td class="color"></td>
+        <td class="color selectedz"></td>
         <td class="color"></td>
         <td class="color"></td>
         <td class="color"></td>
       </tr>
     </table>
+
     <section>
-      <table id="pixel-board">
-        <tr>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-        <tr>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-          <td class="pixel"></td>
-        </tr>
-      </table>
+      <table id="pixel-board"></table>
     </section>
   </main>
   <script src="script.js"></script>
