Corrigindo novamente o requisito 4.

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Pixel Art</title>
 </head>
 <body>
-  <header>
-    <h1 id="title">Paleta de Cores</h1>
-  </header>
-
   <main> 
-    <table id="color-palette">
-      <tr>
-        <td class="color selectedz"></td>
-        <td class="color"></td>
-        <td class="color"></td>
-        <td class="color"></td>
-      </tr>
-    </table>
+    <header>
+      <h1 id="title">Paleta de Cores</h1>
+    </header>
 
-    <section>
-      <table id="pixel-board"></table>
-    </section>
+      <table id="color-palette">
+        <tr>
+          <td class="color selected"></td>
+          <td class="color"></td>
+          <td class="color"></td>
+          <td class="color"></td>
+        </tr>
+      </table>
+
+      <section>
+        <table id="pixel-board"></table>
+      </section>
   </main>
   <script src="script.js"></script>
 </body>
