--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <div class="caixa color" id="fourthbox"> </div>
  </div>
  <br>
+<button id="clear-board">Limpar</button>
+
+<br>
  <br>
  <div id="pixel-board">
     <div class="caixa1 pixel colorpixel"> </div>
