--- a/index.html
+++ b/index.html
@@ -2,66 +2,65 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <h1 id="title"> Paleta de Cores </h1>
 
-    <h1 id="title"> Paleta de Cores </h1>
+  <div id="color-palette">
 
-    <div id="color-palette">
+    <div class='color' style="background-color: black;"></div>
+    <div class='color' style="background-color: cyan;"></div>
+    <div class='color' style="background-color: orange;"></div>
+    <div class='color' style="background-color: magenta;"></div>
 
-        <div class=color id="color-one"></div>
-        <div class=color id="color-two"></div>
-        <div class=color id="color-tree"></div>
-        <div class=color id="color-four"></div>
-
-    </div>
-
+  </div>
+  <div>
     <section id="pixel-board">
-        <div class="first-line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="second-line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="third-line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="fouth-line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-        <div class="fifth-line">
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-          <div class="pixel"></div>
-        </div>
-      </section>
-    
-    </div>
-    <script src="script.js"></script>
-</body>
+      <div class="first-line">
+        <div class="pixel" id='pixel1'></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="second-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="third-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="fouth-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+      <div class="fifth-line">
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+        <div class="pixel"></div>
+      </div>
+    </section>
+
+  </div>
+  <script src="script.js"></script>
+</body onload="myFunction()">
 
 </html>
