--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1 id="title">Paleta de Cores</h1>
 
     <div id="color-palette">
-        <!-- <div class="tr"> </div> -->
+        <div class="tr"> </div>
             <div id="paleta1" class="color selected"></div>
             <div id="paleta2" class="color"></div>
             <div id="paleta3" class="color"></div>
