--- a/index.html
+++ b/index.html
@@ -15,7 +15,18 @@
         <div class="color" id="color2"></div>
         <div class="color" id="color3"></div>
     </div>
-    <div id="pixel-board"></div>
+    <div class="btn-clear">
+
+    </div>
+    <div class="numberPixel">
+        <p>Defina a quantidade  de pixels: </p>
+        <input id="board-size" type="number" min="5" max="50" pattern='\d+' placeholder="5 a 50" value=5>
+        <button id="generate-board" onclick="generatePixel()">VQV</button>
+    </div>
+
+    <div class="container">
+        <div id="pixel-board"></div>
+    </div>
  
 <script src="./script.js" type="text/javascript"></script>
 </body>
